--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
